Update settings page to look nicer.

--- a/InterviewGeneratorBlazorHybrid/Components/Pages/SettingsPage.razor
+++ b/InterviewGeneratorBlazorHybrid/Components/Pages/SettingsPage.razor
@@ -14,8 +14,6 @@
 <p><span class="alert-danger">@ErrorMessage</span></p>
 <p><span class="alert-success">@SuccessMessage</span></p>
 
-<p>Current Database: <b>@DisplayPath</b></p>
-<p>Current Interview Document Template: <b>@InterviewViewModel.InterviewTemplatePath</b></p>
 <div class="container text-center my-5">
     <div class="d-flex justify-content-between px-5" role="group" aria-label="Database options">
         <div class="row g-3">
@@ -35,6 +33,26 @@
             <div class="col-12 col-sm-6">
                 <button class="btn btn-success w-100" @onclick="SelectDifferentDocTemplate">Select A Interview Document Template</button>
             </div>
+        </div>
+    </div>
+</div>
+
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-md-6">
+
+            <table class="table table-bordered table-striped">
+                <tbody>
+                    <tr>
+                        <td><strong>Current Database</strong></td>
+                        <td><code style="color: black;">@DisplayPath</code></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Current Interview Document Template</strong></td>
+                        <td><code style="color: black;">@InterviewViewModel.InterviewTemplatePath</code></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
